fix: add overflow: hidden attribute to header and footer components

--- a/src/website/assets/css/footer.css
+++ b/src/website/assets/css/footer.css
@@ -1,3 +1,7 @@
+body {
+    overflow: hidden
+}
+
 footer{
     width: 100vw;
     background-color: var(--navbar-bg-color);
