--- a/src/website/assets/css/header.css
+++ b/src/website/assets/css/header.css
@@ -1,3 +1,7 @@
+body {
+    overflow: hidden
+}
+
 header {
     width: 100vw;
     background-color: var(--navbar-bg-color);
